# panorama-image-processor

./: .gitignore  Dockerfile  Makefile  README.md  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
src/: .gitignore  test.sh
src/panorama_image_processor/: __main__.py  config.py  exceptions.py  job.py  messaging.py  worker.py
src/panorama_image_processor/datastore/: azure.py  base.py  factory.py  objectstore.py
src/panorama_image_processor/detection/models/: common.py  experimental.py  export.py  yolo.py
src/panorama_image_processor/detection/utils/: autoanchor.py  datasets.py  general.py  google_utils.py  metrics.py  plots.py  torch_utils.py
src/panorama_image_processor/queues/: azure.py  base.py
src/panorama_image_processor/tasks/: base.py  blur.py  detection.py  transform.py
src/panorama_image_processor/transformation/: base.py  cubic.py  equirectangular.py
src/panorama_image_processor/utils/: cube.py  image.py  math.py  queue.py
src/tests/: test_config.py  test_job.py  test_main.py  test_transformation.py  test_worker.py
src/tests/data/: panorama1.csv
tools/: copy_panos.sh
