[metadata]
name = panorama-image-processor
version = 0.0.1
url = https://github.com/amsterdam/panorama-image-processor
license = Mozilla Public 2.0
author = Amsterdam Data en Informatie
author_email = datapunt@amsterdam.nl
description = Amsterdam Panorama Image Processor
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    panorama
    recognition
    amsterdam
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
install_requires =
    azure-storage-blob == 12.8.1
    azure-storage-queue == 12.1.6
    matplotlib == 3.4.2
    numpy == 1.20.3
    opencv-python == 4.5.2.52
    pandas == 1.2.4
    pillow == 8.2.0
    pyyaml == 5.4.1
    requests == 2.25.1
    scipy == 1.6.3
    seaborn == 0.11.1
    torch == 1.8.1
    torchvision == 0.9.1

[options.packages.find]
where=src
exclude =
    tests*

[options.package_data]
* =
    detection/models/*.yaml
    detection/models/*.pt


[options.extras_require]
tests =
    coverage
    flake8
    pytest
    pytest-cov
    tox
dev =
    isort

[options.entry_points]
console_scripts =
    worker = panorama_image_processor.__main__:main
    queue =  panorama_image_processor.__main__:queue
